--- a/TravelAssistant/app/build.gradle
+++ b/TravelAssistant/app/build.gradle
@@ -25,7 +25,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.squareup.moshi:moshi:1.8.0'
     implementation("com.squareup.okhttp3:okhttp:4.2.1")
+    implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.12'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
