--- a/TravelAssistant/app/build.gradle
+++ b/TravelAssistant/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.squareup.moshi:moshi:1.8.0'
     implementation("com.squareup.okhttp3:okhttp:4.2.1")
+    implementation 'com.facebook.android:facebook-login:[5,6)'
     implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.12'
     //noinspection GradleCompatible
