--- a/TravelAssistant/app/src/main/AndroidManifest.xml
+++ b/TravelAssistant/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.travelassistant">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -18,15 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-<<<<<<< HEAD
-        <activity android:name=".CreateTour"
+        <activity android:name=".ListStopPoint"></activity>
+        <activity
+            android:name=".CreateTour"
             android:label="@string/create_tour_str"
-            android:theme="@style/AppTheme">
-
-        </activity>
-        <activity android:name=".ListTourActivity" />
-=======
-
+            android:theme="@style/AppTheme"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -42,7 +37,7 @@
         <activity
             android:name=".StopPointMap"
             android:label="@string/title_activity_stop_point_map"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".ListTourActivity"
             android:label="@string/list_tour"
@@ -51,7 +46,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.travelassistant.MainActivity" />
         </activity>
->>>>>>> d77760f36b44f528838483ca3827075eacc5be39
         <activity
             android:name=".FotgotPasswordActivity"
             android:label="@string/forgot_password"
