Thêm màn hình chat trong tour, xử lý lấy và gửi dữ liệu chat từ api

--- a/TravelAssistant/app/src/main/AndroidManifest.xml
+++ b/TravelAssistant/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity android:name="com.ygaps.travelapp.Map"></activity>
+
+        <activity android:name="com.ygaps.travelapp.ChatActivity"
+            android:theme="@style/AppTheme">
+
+        </activity>
         <activity
             android:name="com.ygaps.travelapp.ListStopPoint"
             android:label="@string/list_stop_point_label"
