--- a/TravelAssistant/app/build.gradle
+++ b/TravelAssistant/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.travelassistant"
+        applicationId "com.ygaps.travelapp"
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
