--- a/TravelAssistant/app/src/main/AndroidManifest.xml
+++ b/TravelAssistant/app/src/main/AndroidManifest.xml
@@ -116,6 +116,7 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
+        <service android:name=".ReplyService" />
     </application>
 
 </manifest>
