--- a/TravelAssistant/app/src/main/AndroidManifest.xml
+++ b/TravelAssistant/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+
         android:usesCleartextTraffic="true">
         <activity
             android:name="com.ygaps.travelapp.TourInfo"
@@ -28,7 +29,8 @@
         <activity android:name="com.ygaps.travelapp.Map"></activity>
 
         <activity android:name="com.ygaps.travelapp.ChatActivity"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize">
 
         </activity>
         <activity
